updated Makefile to accomodate new project structure

--- a/src/makefile
+++ b/src/makefile
@@ -1,21 +1,40 @@
-ASM = nasm
-LD = ld
-ASMFLAGS = -f elf64
-DEBUGFLAGS = -g -F dwarf
-TARGET = main
-SRC = main.asm
-OBJ = main.o
+# assembler & linker
+ASM        := nasm
+LD         := ld
 
-all: clean $(TARGET)
+# flags
+DEBUGFLAGS := -g -F dwarf
+ASMFLAGS   := -f elf64
 
-$(TARGET): $(OBJ)
-	$(LD) -o $@ $<
+# output
+TARGET     := main
 
-$(OBJ): $(SRC)
+# collect all `asm` files and map them to `object` files
+SRCS       := $(wildcard *.asm)
+OBJS       := $(SRCS:.asm=.o)
+
+.PHONY: all run clean
+
+# default target
+all: $(TARGET)
+
+# link all object files
+$(TARGET): $(OBJS)
+	$(LD) -o $@ $^
+
+# assemble each `.asm` -> `.o`
+%.o: %.asm
 	$(ASM) $(ASMFLAGS) -o $@ $<
 
-run: $(TARGET)
+# build & run
+run: all
 	./$(TARGET)
 
+# build and run w/ debubg flags
+debug: ASMFLAGS += $(DEBUGFLAGS)
+debug: clean all
+	./$(TARGET)
+
+# cleanup object and binary files
 clean:
-	rm -f $(OBJ) $(TARGET)
+	rm -f $(OBJS) $(TARGET)
